--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
   padding: 40px 20px 80px;
 }
 
-/* اسم الموقع */
+/* العنوان */
 header {
   text-align: center;
   margin-bottom: 60px;
@@ -36,7 +36,7 @@ header {
 .logo {
   font-size: 48px;
   letter-spacing: 3px;
-  color: #ffffff;
+  color: #fff;
 }
 
 .subtitle {
@@ -52,137 +52,20 @@ header {
   gap: 25px;
 }
 
-/* إطار منتج ستايل PS5 */
+/* كرت المنتج – ستايل PS5 أبيض */
 .product-card {
   background: linear-gradient(180deg, #0a0a0a, #111);
   border-radius: 20px;
   padding: 20px;
-  border: 2px solid #1e90ff;
-  box-shadow: 0 0 20px rgba(30,144,255,0.35);
+  border: 1.5px solid #ffffff;
+  box-shadow: 0 0 15px rgba(255,255,255,0.15);
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .product-card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 0 35px rgba(30,144,255,0.7);
+  box-shadow: 0 0 30px rgba(255,255,255,0.35);
 }
 
-/* مكان الصورة (فارغ عمداً) */
-.product-placeholder {
-  height: 140px;
-  border-radius: 14px;
-  background: #050505;
-  border: 1px dashed #333;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #444;
-  font-size: 13px;
-  margin-bottom: 15px;
-}
-
-/* اسم المنتج */
-.product-name {
-  font-size: 16px;
-  margin-bottom: 8px;
-}
-
-/* السعر */
-.product-price {
-  color: #1e90ff;
-  font-weight: bold;
-  font-size: 15px;
-}
-
-/* الفوتر */
-footer {
-  margin-top: 70px;
-  text-align: center;
-  color: #666;
-  font-size: 13px;
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-
-<header>
-  <div class="logo">ANIME BOX</div>
-  <div class="subtitle">منتجات أنمي | ستايل بلايستيشن 5</div>
-</header>
-
-<section class="products">
-
-  <!-- منتج افتراضي -->
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-  <div class="product-card">
-    <div class="product-placeholder">مكان الصورة</div>
-    <div class="product-name">اسم المنتج</div>
-    <div class="product-price">-- دج</div>
-  </div>
-
-</section>
-
-<footer>
-  © 2026 ANIME BOX — جميع الحقوق محفوظة
-</footer>
-
-</div>
-
-</body>
-</html>
+/* مكان الصورة */
+.product-placeh
