--- a/index.html
+++ b/index.html
@@ -68,4 +68,121 @@ header {
 }
 
 /* مكان الصورة */
-.product-placeh
+.product-placeholder {
+  height: 140px;
+  border-radius: 14px;
+  background: #050505;
+  border: 1px dashed #444;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #555;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+
+/* اسم المنتج */
+.product-name {
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+/* السعر */
+.product-price {
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+/* الفوتر */
+footer {
+  margin-top: 70px;
+  text-align: center;
+  color: #666;
+  font-size: 13px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+<header>
+  <div class="logo">ANIME BOX</div>
+  <div class="subtitle">منتجات أنمي | ستايل بلايستيشن 5</div>
+</header>
+
+<section class="products">
+
+  <!-- 10 منتجات افتراضية -->
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+  <div class="product-card">
+    <div class="product-placeholder">مكان الصورة</div>
+    <div class="product-name">اسم المنتج</div>
+    <div class="product-price">-- دج</div>
+  </div>
+
+</section>
+
+<footer>
+  © 2026 ANIME BOX — جميع الحقوق محفوظة
+</footer>
+
+</div>
+
+</body>
+</html>
